--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "swiper": "^10.2.0",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
